examples/type_mismatch.etch
fn test() -> string { return "hello"; }
fn main() -> void {
  let x: int = test();
}
